--- a/atv2408/index.html
+++ b/atv2408/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <h1>Meu Perfil</h1>
+        <h1>Perfil de Lionel Messi</h1>
         <img src="imagem/Lionel-Messi-Argentina-2022-FIFA-World-Cup_.jpg" alt="Lionel Messi">
       </header>
 
@@ -29,8 +29,8 @@
       </section>
 
       <section>
-        <h2>Sobre mim</h2>
-        <p>Sou um futebolista argentino que atuo como atacante. Atualmente jogo pelo Inter Miami e pela Seleção Argentina, onde, atuo como capitão, venci a Copa do Mundo do Catar de 2022.</p>
+        <h2>Sobre Messi</h2>
+        <p>É um futebolista argentino que atua como atacante. Atualmente joga pelo Inter Miami e pela Seleção Argentina, onde, atua como capitão, venceu a Copa do Mundo do Catar de 2022.</p>
       </section>
 
       <section>
@@ -44,7 +44,7 @@
 
       <section>
         <h2>Realizações</h2>
-        <p>Fui campeão em todas as competições que disputei.</p>
+        <p>Fui campeão em todas as competições que disputou.</p>
       </section>
 
       <footer>
